--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 html{
     background-image: url(./media/pic/pizzabackground_Mesa\ de\ trabajo\ 1_Mesa\ de\ trabajo\ 1.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: scroll;
     background-size: cover;
     -moz-background-size: cover;
