--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 
 html{
     background-image: url(./media/pic/pizzabackground_Mesa\ de\ trabajo\ 1_Mesa\ de\ trabajo\ 1.jpg);
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    background-color: #f1c332;
     background-attachment: scroll;
     background-size: cover;
     -moz-background-size: cover;
@@ -15,13 +16,12 @@ html{
 
 .icono{
     border: solid black 1px;
-    border-radius: 100%;
+    border-radius: 100px;
 
 }
 
 nav{
-    background-color: #B58E14;
-    font-weight: bold;
+    background-color: #d8a809;
 }
 
 button{
@@ -32,8 +32,38 @@ button{
 
 }
 
-.card{
-    background-color: #F1C332;
+.customcard{
+    background-color: #a17e207b ;
     border: solid black 1px;
+    width: 18rem;
 }
 
+.imgcarrousel1{
+    background: linear-gradient(transparent, black 120%), url(./media/pic/foto1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 90vh;
+    background-position: center;
+    box-shadow: inset;
+}
+
+.imgcarrousel2{
+    background: linear-gradient(transparent, black 120%), url(./media/pic/foto2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 90vh;
+    background-position: center;
+}
+
+.imgcarrousel3{
+    background: linear-gradient(transparent, black 120%), url(./media/pic/foto3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 90vh;
+    background-position: center;
+}
+
+.links{
+    font-weight: bold;
+    
+}
